--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,35 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>TmpAdmin</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      <link rel='stylesheet' href='css/style.css'>
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css"> 
   {{#unless environment.production}}
-  <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
+   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
-  
-    {{#each scripts.polyfills}}
-    <script src="{{.}}"></script>
-    {{/each}}
-    <script>
-      System.import('system-config.js').then(function () {
-        System.import('main');
-      }).catch(console.error.bind(console));
-    </script>
-  
+
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+
+  {{#each scripts.polyfills}}
+  <script src="{{.}}"></script>
+  {{/each}}
+  <script>
+    System.import('system-config.js').then(function() {
+      System.import('main');
+    }).catch(console.error.bind(console));
+  </script>
 </body>
+
 </html>
