--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <title>TmpAdmin</title>
   <base href="/">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel='stylesheet' href='css/style.css'>
-     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css"> 
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.min.css"> 
   {{#unless environment.production}}
-   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
+    <script src="/ember-cli-live-reload.js" type="text/javascript"></script> 
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -18,17 +17,15 @@
 
 <body>
   <app-root>Loading...</app-root>
-
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script> 
   {{#each scripts.polyfills}}
-  <script src="{{.}}"></script>
+    <script src="{{.}}"></script> 
   {{/each}}
   <script>
     System.import('system-config.js').then(function() {
       System.import('main');
-    }).catch(console.error.bind(console));
+    }).catch(console.error.bind(console));2
   </script>
 </body>
 
